--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,9 +16,9 @@ body {
 .gradient-bg-welcome {
   background-color:#0f0e13;
   background-image: 
-    radial-gradient(at 0% 0%, hsla(253,16%,7%,1) 0, transparent 50%), 
-    radial-gradient(at 50% 0%, hsla(225,39%,30%,1) 0, transparent 50%), 
-    radial-gradient(at 100% 0%, hsla(339,49%,30%,1) 0, transparent 50%);
+    radial-gradient(at 0% 0%, rgb(9, 71, 42) 0, transparent 50%), 
+    radial-gradient(at 50% 0%, rgb(71, 87, 41) 0, transparent 50%), 
+    radial-gradient(at 100% 0%, rgb(77, 163, 27) 0, transparent 50%);
 }
 
 .gradient-bg-services {
